fix(form): fix misalignment in fixed label
- close https://github.com/ng-alain/ng-alain/issues/1647

--- a/packages/theme/styles/app/delon/_sf.less
+++ b/packages/theme/styles/app/delon/_sf.less
@@ -8,11 +8,8 @@
   }
   // 固定 label
   &__fixed {
-    display: flex !important;
-    nz-form-control,
-    .@{ant-prefix}-form-item-control-wrapper {
-      flex: 1;
-    }
+    display: flex;
+    flex-flow: row;
   }
   &__title {
     margin-bottom: 8px;
@@ -109,19 +106,25 @@
     }
   }
   &__inline {
-    sf-item-wrap {
-      .@{ant-prefix}-form-item {
-        display: inline-flex;
-        .@{ant-prefix}-form-item-control-wrapper {
-          flex: 1;
-        }
+    sf-item {
+      display: inline-block;
+      margin-bottom: 8px;
+    }
+    .@{ant-prefix}-form-inline {
+      display: block;
+      > sf-item {
+        margin-bottom: 0;
       }
+    }
+    .@{ant-prefix}-form-inline .@{ant-prefix}-form-item {
+      display: inline;
     }
     .sf-btns {
       margin-right: 0;
     }
     @media (max-width: @mobile-max) {
-      sf-item-wrap {
+      sf-item {
+        display: block;
         .@{ant-prefix}-form-item {
           display: block !important;
           width: initial !important;
@@ -129,7 +132,7 @@
         }
       }
       .@{ant-prefix}-form-item-label,
-      .@{ant-prefix}-form-item-control-wrapper {
+      .@{ant-prefix}-form-item-control {
         display: block !important;
         width: 100% !important;
         padding: inherit;
