--- a/packages/theme/styles/app/widgets/_form.less
+++ b/packages/theme/styles/app/widgets/_form.less
@@ -27,11 +27,11 @@
           padding-right: 8px;
           line-height: 32px;
         }
-        .@{ant-prefix}-form-item-control {
+        .@{ant-prefix}-form-item-control-content {
           line-height: 32px;
         }
       }
-      .@{ant-prefix}-form-item-control-wrapper {
+      .@{ant-prefix}-form-item-control {
         flex: 1;
       }
     }
